<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigations"
    app:startDestination="@id/taskListFragment">
    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.github.ttanaka330.learning.todo.TaskListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskList_to_taskCompleted"
            app:destination="@+id/taskCompletedFragment" />
        <action
            android:id="@+id/action_taskList_to_taskDetail"
            app:destination="@+id/taskDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.github.ttanaka330.learning.todo.TaskDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/taskCompletedFragment"
        android:name="com.github.ttanaka330.learning.todo.TaskCompletedFragment"
        android:label="@string/title_completed"
        tools:layout="@layout/fragment_task_completed">
        <action
            android:id="@+id/action_taskCompleted_to_taskDetail"
            app:destination="@+id/taskDetailFragment" />
    </fragment>
</navigation>